[package]
name = "num_to_words"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "performance_comparison"
harness = false

[[test]]
path = "benches/result_test.rs"
name = "result_test"
test = true